ライセンス表記など

--- a/btad.css
+++ b/btad.css
@@ -1,3 +1,11 @@
+/*
+ * Copyright (c) 2016 ojunn
+ * https://raw.githubusercontent.com/ojunn/jsf-btad/master/btad.css
+ * 
+ * This file is distributed under MIT License.
+ * See LICENSE for more information.
+ */
+
 * {
     overflow: visible;
 }
