--- a/template/base.html
+++ b/template/base.html
@@ -6,15 +6,141 @@
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.css">
   <link rel="stylesheet" href="./css/paper.css">
-  <style>@page { size: A4 landscape }</style>
+  <link rel="stylesheet" href="./css/style.css">
 </head>
 
-<body class="A4 landscape">
+<body class="A4 landscape" contenteditable>
 
-  <!-- "padding-**mm" is optional: you can set 10, 15, 20 or 25 -->
-  <section class="sheet padding-10mm">
+  <section class="sheet padding-5mm">
 
-    <article>This is an A4 document (landscape).</article>
+    <h1>バッジテスト手控え</h1>
+    <table class="basic_information">
+	    <tr>
+		    <th>実施日</th><td class="date"><span class="year"></span>年<span class="month"></span>月<span class="day"></span>日</td>
+		    <th>実施場所</th><td class="place"></td>
+		</tr>
+		<tr>
+		    <th>実施連盟</th><td class="host"></td>
+		    <th>審判員氏名</th><td class="judge"></td>
+		</tr>
+    </table>
+    
+<table class="marking_sheet grade-0 element">
+	<colgroup class="number"><colgroup class="name"><colgroup class="item" span="6"><colgroup class="result">
+	<thead>
+		<tr class="caption">
+			<th class="category" colspan="2">必須要素</th>
+			<th class="grade">初級</th>
+			<th></th>
+			<th></th>
+			<th></th>
+			<th>（音楽あり：CD2）</th>
+			<th>（音楽あり：CD2）</th>
+			<th></th>
+		</tr>
+		<tr class="title">
+			<th>番<br>号</th>
+			<th>選手名</th>
+			<th>ハーフサークル<br>RFO-LFO</th>
+			<th>ハーフサークル<br>RFI-LFI</th>
+			<th>ハーフサークル<br>RBO-LBO</th>
+			<th>ハーフサークル<br>RBI-LBI</th>
+			<th>フォワードストローク、<br>クロスとストップ</th>
+			<th>バックワードクロスで<br>パラグラフ・パターンを2周</th>
+			<th>合<br>否</th>
+		</tr>
+	</thead>
+	<tbody>
+		<tr>
+			<th></th>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+		</tr>
+		<tr>
+			<th></th>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+		</tr>
+		<tr>
+			<th></th>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+		</tr>
+		<tr>
+			<th></th>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+		</tr>
+		<tr>
+			<th></th>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+		</tr>
+		<tr>
+			<th></th>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+		</tr>
+		<tr>
+			<th></th>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+		</tr>
+		<tr>
+			<th></th>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+		</tr>
+	</tbody>
+</table>    
 
   </section>
 
