基本テンプレート修正

--- a/template/base.html
+++ b/template/base.html
@@ -9,11 +9,14 @@
   <link rel="stylesheet" href="./css/style.css">
 </head>
 
-<body class="A4 landscape" contenteditable>
+<body class="A4 landscape element grade-0" contenteditable>
 
   <section class="sheet padding-5mm">
 
     <h1>バッジテスト手控え</h1>
+    
+    <h2>初級</h2>
+    
     <table class="basic_information">
 	    <tr>
 		    <th>実施日</th><td class="date"><span class="year"></span>年<span class="month"></span>月<span class="day"></span>日</td>
@@ -25,17 +28,17 @@
 		</tr>
     </table>
     
-<table class="marking_sheet grade-0 element">
+<table class="marking_sheet">
 	<colgroup class="number"><colgroup class="name"><colgroup class="item" span="6"><colgroup class="result">
 	<thead>
 		<tr class="caption">
 			<th class="category" colspan="2">必須要素</th>
-			<th class="grade">初級</th>
 			<th></th>
 			<th></th>
 			<th></th>
-			<th>（音楽あり：CD2）</th>
-			<th>（音楽あり：CD2）</th>
+			<th></th>
+			<th>音楽：CD2</th>
+			<th>音楽：CD2</th>
 			<th></th>
 		</tr>
 		<tr class="title">
