bodyではなくsectionにclassを入れる

--- a/template/2es.html
+++ b/template/2es.html
@@ -9,9 +9,9 @@
   <link rel="stylesheet" href="./css/style.css">
 </head>
 
-<body class="A4 landscape element grade-2es" contenteditable>
+<body class="A4 landscape" contenteditable>
 
-  <section class="sheet padding-5mm">
+  <section class="sheet element grade-2es">
 
     <h1>バッジテスト手控え</h1>
     
@@ -193,23 +193,7 @@
 			<td></td>
 			<td></td>
 		</tr>
-		<tr>
-			<th></th>
-			<td></td>
-			<td></td>
-			<td></td>
-			<td></td>
-			<td></td>
-			<td></td>
-			<td></td>
-			<td></td>
-			<td></td>
-			<td></td>
-			<td></td>
-			<td></td>
-			<td></td>
-			<td></td>
-		</tr>
+
 	</tbody>
 </table>    
 
