--- a/template/2fs.html
+++ b/template/2fs.html
@@ -9,13 +9,13 @@
   <link rel="stylesheet" href="./css/style.css">
 </head>
 
-<body class="A4 landscape freeskating grade-2fs" contenteditable>
+<body class="A4 landscape" contenteditable>
 
-  <section class="sheet padding-5mm">
+  <section class="sheet freeskating grade-2fs">
 
     <h1>バッジテスト手控え</h1>
     
-    <h2>初級</h2>
+    <h2>2級</h2>
     
     <table class="basic_information">
 	    <tr>
