--- a/template/0.html
+++ b/template/0.html
@@ -9,9 +9,9 @@
   <link rel="stylesheet" href="./css/style.css">
 </head>
 
-<body class="A4 landscape element grade-0" contenteditable>
+<body class="A4 landscape" contenteditable>
 
-  <section class="sheet padding-5mm">
+  <section class="sheet element grade-0">
 
     <h1>バッジテスト手控え</h1>
 
