--- a/template/base-free.html
+++ b/template/base-free.html
@@ -9,9 +9,9 @@
   <link rel="stylesheet" href="./css/style.css">
 </head>
 
-<body class="A4 landscape freeskating grade-2fs" contenteditable>
+<body class="A4 landscape" contenteditable>
 
-  <section class="sheet padding-5mm">
+  <section class="sheet freeskating grade-2fs">
 
     <h1>バッジテスト手控え</h1>
     
