--- a/template/css/style.css
+++ b/template/css/style.css
@@ -52,7 +52,7 @@ table.basic_information td.date {
 }
 table.basic_information td.date span {
 	display: inline-block;
-	width: 6mm;
+	width: 7.5mm;
 	text-align: right;
 }
 
@@ -137,6 +137,7 @@ table.marking_sheet colgroup.number {width:  4mm;}
 /*table.marking_sheet colgroup.name   {width: 30mm;}*/
 table.marking_sheet colgroup.item   {width: 30mm; }
 table.marking_sheet colgroup.result {width:  4mm;}
+table.marking_sheet colgroup.choice   {width: 4mm; }
 
 .grade-0 table.marking_sheet colgroup.jump   {width: 35mm; }
 .grade-0 table.marking_sheet colgroup.step   {width: 50mm; }
@@ -149,15 +150,18 @@ table.marking_sheet colgroup.result {width:  4mm;}
 
 .grade-2es table.marking_sheet colgroup.item   {width: 28mm; }
 .grade-2es table.marking_sheet colgroup.jump   {width: 16mm; }
-.grade-2es table.marking_sheet colgroup.choice   {width: 4mm; }
 .grade-2es table.marking_sheet thead tr.title th:nth-child(9),  .grade-2es table.marking_sheet tbody td:nth-child(9)  { border-left: 3px double black; border-right: 3px double black;}
 .grade-2es table.marking_sheet thead tr.title th:nth-child(15), .grade-2es table.marking_sheet tbody td:nth-child(15) { border-left: 3px double black;}
 
 .grade-3es table.marking_sheet colgroup.item   {width: 25mm; }
 .grade-3es table.marking_sheet colgroup.jump   {width: 18mm; }
-.grade-3es table.marking_sheet colgroup.choice   {width: 4mm; }
 .grade-3es table.marking_sheet thead tr.title th:nth-child(9),  .grade-3es table.marking_sheet tbody td:nth-child(9)  { border-left: 3px double black; border-right: 3px double black;}
 .grade-3es table.marking_sheet thead tr.title th:nth-child(15), .grade-3es table.marking_sheet tbody td:nth-child(15) { border-left: 3px double black;}
+
+.grade-4es table.marking_sheet colgroup.item   {width: 25mm; }
+.grade-4es table.marking_sheet colgroup.jump   {width: 18mm; }
+.grade-4es table.marking_sheet thead tr.title th:nth-child(9),  .grade-4es table.marking_sheet tbody td:nth-child(9)  { border-left: 3px double black; border-right: 3px double black;}
+.grade-4es table.marking_sheet thead tr.title th:nth-child(15), .grade-4es table.marking_sheet tbody td:nth-child(15) { border-left: 3px double black;}
 
 /*
  * フリースケーティング
