7級と8級の要素、一人の幅を増やす

--- a/template/7es.html
+++ b/template/7es.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="utf-8">
-  <title>バッジテスト 6級 必須要素＆ステップ</title>
+  <title>バッジテスト 7級 必須要素＆ステップ</title>
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.css">
   <link rel="stylesheet" href="./css/paper.css">
@@ -11,11 +11,11 @@
 
 <body class="A4 landscape" contenteditable>
 
-  <section class="sheet element grade-6es">
+  <section class="sheet element grade-7es">
 
     <h1>バッジテスト手控え</h1>
     
-    <h2>6級</h2>
+    <h2>7級</h2>
     
     <table class="basic_information">
 	    <tr>
@@ -30,8 +30,7 @@
     
 <table class="marking_sheet">
 	<colgroup class="number"><colgroup class="name">
-	<colgroup class="item jump" span="3"><colgroup class="item spin" span="2">
-	<colgroup class="item memo">
+	<colgroup class="item jump" span="4"><colgroup class="item spin" span="2">
 	<colgroup class="result">
 	<thead>
 		<tr class="caption">
@@ -41,26 +40,15 @@
 			<th  class="number">番<br>号</th>
 			<th  class="name">選手名</th>
 			<th >2A</th>
-			<th >ジャンプコンボ<br>女子：2+2+2<br>男子：3+2以上<br>（同じ種類は2回まで）</th>
-			<th >ステップからの<br>単独ジャンプ<br>（今年度のJrSP課題）</th>
-			<th >CCoSp3p<br>（足換え後に3姿勢各2回転、<br>足換え前も1姿勢必要）</th>
-			<th >フライングスピン<br>（正しい空中姿勢、<br>姿勢変更なしで8回転、<br>今年度のJrSP課題）</th>
-			<th >備考</th>
+			<th >ステップからの<br>トリプルジャンプ</th>
+			<th >単独の<br>トリプルジャンプ<br>（左とは別の種類）</th>
+			<th >ジャンプコンボ<br>3+2以上</th>
+			<th >任意のフライングスピン<br>（姿勢とバリエーションの変更なしで8回転した後に、難しいバリエーションまたはチェンジエッジを行う）</th>
+			<th >CCoSp<br>（今季のレベルを上げるフィーチャーを3つ）</th>
 			<th  class="result">EL<br>合否</th>
 		</tr>
 	</thead>
 	<tbody>
-		<tr>
-			<th></th>
-			<td></td>
-			<td></td>
-			<td></td>
-			<td></td>
-			<td></td>
-			<td></td>
-			<td></td>
-			<td></td>
-		</tr>
 		<tr>
 			<th></th>
 			<td></td>
