--- a/template/4fs.html
+++ b/template/4fs.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="utf-8">
-  <title>バッジテスト 3級 フリースケーティング</title>
+  <title>バッジテスト 4級 フリースケーティング</title>
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.css">
   <link rel="stylesheet" href="./css/paper.css">
@@ -11,11 +11,11 @@
 
 <body class="A4 landscape" contenteditable>
 
-  <section class="sheet freeskating grade-3fs">
+  <section class="sheet freeskating grade-4fs">
 
     <h1>バッジテスト手控え</h1>
     
-    <h2>3級</h2>
+    <h2>4級</h2>
     
     <table class="basic_information">
 	    <tr>
@@ -31,36 +31,36 @@
 
 <div>
 	<span class="category">フリー・スケーティング</span>
-	<span class="duration">男子・女子：2′00″</span>
+	<span class="duration">女子：2′30″、男子：3′00″</span>
 </div>
 
 <table class="reguration">
 	<tr>
-		<th rowspan="3">実施<br>最低<br>要素</th>
+		<th rowspan="3">実施最低要素<br>要素の数はJSFノービスB課題に準ずる</th>
 		<th>ジャンプ</th>
 		<td>
 			<ol>
 				<li>1A</li>
-				<li>任意のダブル</li>
-				<li>ジャンプ・コンビネーション（２＋１以上、2と同じ種類のジャンプでもよいが2とは別で行うこと）</li>
+				<li>3種類のダブル・ジャンプ（トウジャンプとエッジジャップの両方が必要</li>
+				<li>ジャンプ・コンビネーション<br>（２＋２以上、2と同じ種類のジャンプでもよいが2とは別で行うこと）</li>
 			</ol>
 		</td>
 		<th rowspan="3">合格<br>基準</th>
-		<td rowspan="3">GOE: -4以内<br>PCS: 平均2.00以上</td>
+		<td rowspan="3">GOE: -4以内<br>PCS: 平均2.50以上</td>
 	</tr>
 	<tr>
-		<th>スピン<br>右の内２つ</th>
+		<th>スピン</th>
 		<td>
 			<ol>
-				<li>CSp（5回転以上、足換えなし）</li>
-				<li>フライングスピン（着氷後5回転以上、足換えなし）</li>
-				<li>CoSp（キャメルおよびシットポジションの両方を含む、6回転以上）</li>
+				<li>女子：LSp（6回転以上、足換えなし）<br>男子：CSp/SSp（6回転以上、足換え任意）</li>
+				<li>フライングスピン（着氷後6回転以上、姿勢変更なし、足換えなし）</li>
+				<li>CoSp/CCoSp（10回転以上）</li>
 			</ol>
 		</td>
 	</tr>
 	<tr>
-		<th>StSq</th>
-		<td>リンクの長辺の１／２以上の長さが必要</td>
+		<th>ChSq</th>
+		<td>女子は約3秒の支持なしスパイラルを含む</td>
 	</tr>
 </table>
 
@@ -69,7 +69,7 @@
 	<colgroup class="item jump" span="6">
 	<colgroup class="item spin" span="2">
 	<colgroup class="item step">
-	<colgroup class="item pcs" span="3">
+	<colgroup class="item pcs" span="5">
 	<colgroup class="item pcs-average">
 	<colgroup class="result">
 	<thead>
@@ -77,19 +77,24 @@
 			<th rowspan="2" class="number">番<br>号</th>
 			<th rowspan="2" class="name">選手名</th>
 			<th colspan="6">ジャンプ</th>
-			<th colspan="2" rowspan="2">スピン</th>
-			<th rowspan="2">Step</th>
-			<th colspan="3">PCS</th>
+			<th colspan="3">スピン</th>
+			<th rowspan="2">ChSq</th>
+			<th colspan="5">PCS</th>
 			<th>合計</th>
 			<th rowspan="2" class="result">合<br>否</th>
 		</tr>
 		<tr class="title title-2">
 			<th>1A</th>
-			<th>ダブル</th>
+			<th colspan="3">ダブル</th>
 			<th>コンボ</th>
-			<th colspan="3">その他</th>
+			<th>（男子）</th>
+			<th>1姿勢</th>
+			<th>フライング</th>
+			<th>(C)CoSp</th>
 			<th>SS</th>
+			<th>TR</th>
 			<th>PE</th>
+			<th>CH</th>
 			<th>IN</th>
 			<th>平均</th>
 		</tr>
@@ -111,6 +116,9 @@
 			<td></td>
 			<td></td>
 			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
 			<td rowspan="2"></td>
 		</tr>
 		<tr class="goe">
@@ -124,7 +132,8 @@
 			<td></td>
 			<td></td>
 			<td></td>
-			<td colspan="3"></td>
+			<td></td>
+			<td colspan="5"></td>
 			<td></td>
 		</tr>
 		<tr class="element">
@@ -143,6 +152,9 @@
 			<td></td>
 			<td></td>
 			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
 			<td rowspan="2"></td>
 		</tr>
 		<tr class="goe">
@@ -156,7 +168,8 @@
 			<td></td>
 			<td></td>
 			<td></td>
-			<td colspan="3"></td>
+			<td></td>
+			<td colspan="5"></td>
 			<td></td>
 		</tr>
 		<tr class="element">
@@ -175,6 +188,9 @@
 			<td></td>
 			<td></td>
 			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
 			<td rowspan="2"></td>
 		</tr>
 		<tr class="goe">
@@ -188,7 +204,8 @@
 			<td></td>
 			<td></td>
 			<td></td>
-			<td colspan="3"></td>
+			<td></td>
+			<td colspan="5"></td>
 			<td></td>
 		</tr>
 		<tr class="element">
@@ -207,35 +224,6 @@
 			<td></td>
 			<td></td>
 			<td></td>
-			<td rowspan="2"></td>
-		</tr>
-		<tr class="goe">
-			<td>GOE</td>
-			<td></td>
-			<td></td>
-			<td></td>
-			<td></td>
-			<td></td>
-			<td></td>
-			<td></td>
-			<td></td>
-			<td></td>
-			<td colspan="3"></td>
-			<td></td>
-		</tr>
-		<tr class="element">
-			<th rowspan="2"></th>
-			<td></td>
-			<td></td>
-			<td></td>
-			<td></td>
-			<td></td>
-			<td></td>
-			<td></td>
-			<td></td>
-			<td></td>
-			<td></td>
-			<td></td>
 			<td></td>
 			<td></td>
 			<td></td>
@@ -252,7 +240,8 @@
 			<td></td>
 			<td></td>
 			<td></td>
-			<td colspan="3"></td>
+			<td></td>
+			<td colspan="5"></td>
 			<td></td>
 		</tr>
 	</tbody>
