--- a/template/css/style.css
+++ b/template/css/style.css
@@ -230,3 +230,16 @@ table.reguration ol {
 .grade-3fs table.marking_sheet colgroup.jump   {width: 20mm; }
 .grade-3fs table.marking_sheet colgroup.pcs   {width: 20mm; }
 .grade-3fs table.marking_sheet colgroup.pcs-average   {width: 16mm; }
+.grade-3fs table.marking_sheet tbody td { height: 16mm; }
+
+.grade-4fs table.marking_sheet thead tr.title-1 th:nth-child(6),
+.grade-4fs table.marking_sheet thead tr.title-2 th:nth-child(8),
+.grade-4fs table.marking_sheet tbody tr.element td:nth-child(13),
+.grade-4fs table.marking_sheet tbody tr.goe     td:nth-child(12),
+.grade-4fs table.marking_sheet thead tr.title-1 th:nth-child(8),
+.grade-4fs table.marking_sheet tbody tr.element td:nth-child(19) { border-left: 3px double black;}
+.grade-4fs table.marking_sheet colgroup.item   {width: 20mm; }
+.grade-4fs table.marking_sheet colgroup.jump   {width: 20mm; }
+.grade-4fs table.marking_sheet colgroup.pcs   {width: 20mm; }
+.grade-4fs table.marking_sheet colgroup.pcs-average   {width: 16mm; }
+.grade-4fs table.marking_sheet tbody td { height: 18mm; }
