--- a/template/5fs.html
+++ b/template/5fs.html
@@ -31,7 +31,7 @@
 
 <div>
 	<span class="category">フリー・スケーティング</span>
-	<span class="duration">女子：3′00、男子：3′30″</span>
+	<span class="duration">女子：3′00″、男子：3′30″</span>
 </div>
 
 <table class="reguration">
