--- a/template/css/style.css
+++ b/template/css/style.css
@@ -256,6 +256,19 @@ table.reguration ol {
 .grade-5fs table.marking_sheet colgroup.pcs-average   {width: 16mm; }
 .grade-5fs table.marking_sheet tbody td { height: 20mm; }
 
+.grade-6fs table.marking_sheet thead tr.title-1 th:nth-child(6),
+.grade-6fs table.marking_sheet thead tr.title-2 th:nth-child(7),
+.grade-6fs table.marking_sheet tbody tr.element td:nth-child(15),
+.grade-6fs table.marking_sheet tbody tr.goe     td:nth-child(14),
+.grade-6fs table.marking_sheet thead tr.title-1 th:nth-child(8),
+.grade-6fs table.marking_sheet tbody tr.element td:nth-child(21) { border-left: 3px double black;}
+.grade-6fs table.marking_sheet colgroup.item   {width: 14mm; }
+.grade-6fs table.marking_sheet colgroup.jump   {width: 14mm; }
+.grade-6fs table.marking_sheet colgroup.pcs   {width: 14mm; }
+.grade-6fs table.marking_sheet colgroup.pcs-average   {width: 16mm; }
+.grade-6fs table.marking_sheet tbody td { height: 22mm; }
+.grade-6fs table.reguration th:nth-child(1) {width: 40mm; }
+
 
 .short-program table.marking_sheet tbody td { height: 15mm; }
 .short-program table.marking_sheet tbody tr.goe td { height: 8mm; }
@@ -276,4 +289,30 @@ table.reguration ol {
 .grade-6sp table.marking_sheet colgroup.pcs   {width: 16mm; }
 .grade-6sp table.marking_sheet colgroup.pcs-average   {width: 14mm; }
 .grade-6sp table.marking_sheet tbody td { height: 20mm; }
+
+.grade-7sp table.marking_sheet thead tr.title-1 th:nth-child(6),
+.grade-7sp table.marking_sheet thead tr.title-2 th:nth-child(8),
+.grade-7sp table.marking_sheet tbody tr.element td:nth-child(10),
+.grade-7sp table.marking_sheet tbody tr.goe     td:nth-child(9),
+.grade-7sp table.marking_sheet thead tr.title-1 th:nth-child(8),
+.grade-7sp table.marking_sheet tbody tr.element td:nth-child(16) { border-left: 3px double black;}
+.grade-7sp table.marking_sheet colgroup.item   {width: 20mm; }
+.grade-7sp table.marking_sheet colgroup.jump   {width: 24mm; }
+.grade-7sp table.marking_sheet colgroup.jump-combo   {width: 24mm; }
+.grade-7sp table.marking_sheet colgroup.pcs   {width: 16mm; }
+.grade-7sp table.marking_sheet colgroup.pcs-average   {width: 14mm; }
+.grade-7sp table.marking_sheet tbody td { height: 20mm; }
+
+.grade-8sp table.marking_sheet thead tr.title-1 th:nth-child(6),
+.grade-8sp table.marking_sheet thead tr.title-2 th:nth-child(8),
+.grade-8sp table.marking_sheet tbody tr.element td:nth-child(10),
+.grade-8sp table.marking_sheet tbody tr.goe     td:nth-child(9),
+.grade-8sp table.marking_sheet thead tr.title-1 th:nth-child(8),
+.grade-8sp table.marking_sheet tbody tr.element td:nth-child(16) { border-left: 3px double black;}
+.grade-8sp table.marking_sheet colgroup.item   {width: 20mm; }
+.grade-8sp table.marking_sheet colgroup.jump   {width: 24mm; }
+.grade-8sp table.marking_sheet colgroup.jump-combo   {width: 24mm; }
+.grade-8sp table.marking_sheet colgroup.pcs   {width: 16mm; }
+.grade-8sp table.marking_sheet colgroup.pcs-average   {width: 14mm; }
+.grade-8sp table.marking_sheet tbody td { height: 20mm; }
 
