--- a/template/es.html
+++ b/template/es.html
@@ -5,8 +5,8 @@
   <title>バッジテスト エレメンツ＆ステップ</title>
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.css">
-  <link rel="stylesheet" href="./css/paper.css">
-  <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="https://raw.githubusercontent.com/ojunn/jsf-btad/master/template/css/paper.css">
+  <link rel="stylesheet" href="https://raw.githubusercontent.com/ojunn/jsf-btad/master/template/css/style.css">
 </head>
 
 <body class="A4 landscape" contenteditable>
