--- a/template/8sp.html
+++ b/template/8sp.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="utf-8">
-  <title>バッジテスト 8級 フリースケーティング</title>
+  <title>バッジテスト 8級 ショートプログラム</title>
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.css">
   <link rel="stylesheet" href="./css/paper.css">
